Fix: Tuned icon no longer wildly misplaced in Organizer/right align numbers (#11383)

--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -14,10 +14,8 @@
 }
 
 .statValue {
-  composes: flexRow from '../dim-ui/common.m.scss';
-  align-items: center;
-  gap: 3px;
   min-width: 2ch; // Try to right-align 2-digit numbers
+  text-align: right;
 
   &.noMinWidth {
     min-width: unset;
@@ -27,6 +25,7 @@
 .bar {
   height: 80%;
   width: 100%;
+  position: relative;
   > span {
     display: block;
     background-color: rgb(255, 255, 255, 0.25);
@@ -46,5 +45,6 @@
 .tunedStatIcon {
   color: #fff;
   position: absolute;
+  left: 0;
   transform: scale(-1, 1);
 }
